Working version of List / Create / Get with tests
