# contract/api/european.pb.go
@@ -27,7 +27,7 @@ var _ = math.Inf
 const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package
 
 type European struct {
-	EuropeanId           string   `protobuf:"bytes,1,opt,name=european_id,json=europeanId,proto3" json:"european_id,omitempty"`
+	Uid                  string   `protobuf:"bytes,1,opt,name=uid,proto3" json:"uid,omitempty"`
 	Timestamp            float64  `protobuf:"fixed64,2,opt,name=timestamp,proto3" json:"timestamp,omitempty"`
 	Ticker               string   `protobuf:"bytes,3,opt,name=ticker,proto3" json:"ticker,omitempty"`
 	Undticker            string   `protobuf:"bytes,4,opt,name=undticker,proto3" json:"undticker,omitempty"`
@@ -64,9 +64,9 @@ func (m *European) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_European proto.InternalMessageInfo
 
-func (m *European) GetEuropeanId() string {
+func (m *European) GetUid() string {
 	if m != nil {
-		return m.EuropeanId
+		return m.Uid
 	}
 	return ""
 }
@@ -184,7 +184,7 @@ func (m *ListEuropeansResponse) GetEuropeans() []*European {
 }
 
 type GetEuropeanRequest struct {
-	EuropeanId           string   `protobuf:"bytes,1,opt,name=european_id,json=europeanId,proto3" json:"european_id,omitempty"`
+	Uid                  string   `protobuf:"bytes,1,opt,name=uid,proto3" json:"uid,omitempty"`
 	Ticker               string   `protobuf:"bytes,2,opt,name=ticker,proto3" json:"ticker,omitempty"`
 	Timestamp            float64  `protobuf:"fixed64,3,opt,name=timestamp,proto3" json:"timestamp,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
@@ -217,9 +217,9 @@ func (m *GetEuropeanRequest) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_GetEuropeanRequest proto.InternalMessageInfo
 
-func (m *GetEuropeanRequest) GetEuropeanId() string {
+func (m *GetEuropeanRequest) GetUid() string {
 	if m != nil {
-		return m.EuropeanId
+		return m.Uid
 	}
 	return ""
 }
@@ -317,7 +317,7 @@ func (m *UpdateEuropeanRequest) GetEuropean() *European {
 }
 
 type DeleteEuropeanRequest struct {
-	EuropeanId           string   `protobuf:"bytes,1,opt,name=european_id,json=europeanId,proto3" json:"european_id,omitempty"`
+	Uid                  string   `protobuf:"bytes,1,opt,name=uid,proto3" json:"uid,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -348,9 +348,9 @@ func (m *DeleteEuropeanRequest) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_DeleteEuropeanRequest proto.InternalMessageInfo
 
-func (m *DeleteEuropeanRequest) GetEuropeanId() string {
+func (m *DeleteEuropeanRequest) GetUid() string {
 	if m != nil {
-		return m.EuropeanId
+		return m.Uid
 	}
 	return ""
 }
@@ -368,40 +368,40 @@ func init() {
 func init() { proto.RegisterFile("european.proto", fileDescriptor_4735b72c5277468d) }
 
 var fileDescriptor_4735b72c5277468d = []byte{
-	// 524 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xac, 0x54, 0xcf, 0x8b, 0xd3, 0x40,
-	0x14, 0x26, 0xed, 0xda, 0xdd, 0xbe, 0x6a, 0xc5, 0xc1, 0x96, 0x90, 0x2d, 0x58, 0x03, 0x62, 0x11,
-	0x36, 0x81, 0x16, 0xf1, 0xd7, 0x4d, 0x5d, 0x44, 0xf0, 0x20, 0x11, 0x2f, 0x5e, 0x96, 0x34, 0x7d,
-	0xd6, 0xa1, 0x6d, 0x66, 0xcc, 0x4c, 0x16, 0x8b, 0x78, 0xf1, 0xec, 0xcd, 0xbf, 0xca, 0xb3, 0xff,
-	0x82, 0x7f, 0x85, 0x27, 0xc9, 0x24, 0x93, 0xa4, 0xed, 0xd8, 0x5e, 0xf6, 0x96, 0xf7, 0x5e, 0xde,
-	0xf7, 0xcd, 0xfb, 0xbe, 0xc7, 0x83, 0x2e, 0xa6, 0x09, 0xe3, 0x18, 0xc6, 0x1e, 0x4f, 0x98, 0x64,
-	0xe4, 0xd6, 0x9c, 0x31, 0x2e, 0x29, 0x8b, 0xbd, 0x88, 0xc5, 0x32, 0x09, 0x23, 0xe9, 0x0c, 0xe6,
-	0x8c, 0xcd, 0x97, 0xe8, 0x87, 0x9c, 0xfa, 0x61, 0x1c, 0x33, 0x19, 0x66, 0x75, 0x91, 0x37, 0x38,
-	0xa7, 0x45, 0x55, 0x45, 0xd3, 0xf4, 0xa3, 0x8f, 0x2b, 0x2e, 0xd7, 0x79, 0xd1, 0xfd, 0x65, 0xc1,
-	0xc9, 0x79, 0x41, 0x40, 0xee, 0x40, 0x47, 0x93, 0x5d, 0xd0, 0x99, 0x6d, 0x0d, 0xad, 0x51, 0x3b,
-	0x00, 0x9d, 0x7a, 0x3d, 0x23, 0x03, 0x68, 0x4b, 0xba, 0x42, 0x21, 0xc3, 0x15, 0xb7, 0x1b, 0x43,
-	0x6b, 0x64, 0x05, 0x55, 0x82, 0xf4, 0xa1, 0x25, 0x69, 0xb4, 0xc0, 0xc4, 0x6e, 0xaa, 0xce, 0x22,
-	0xca, 0xba, 0xd2, 0x78, 0x56, 0x94, 0x8e, 0x54, 0xa9, 0x4a, 0x64, 0x5d, 0x42, 0x26, 0x74, 0x81,
-	0xf6, 0x35, 0x05, 0x58, 0x44, 0x59, 0x1e, 0xbf, 0x70, 0x9a, 0xac, 0xed, 0x56, 0x9e, 0xcf, 0x23,
-	0x62, 0xc3, 0x31, 0x4f, 0x65, 0x14, 0x2e, 0x97, 0xf6, 0xb1, 0xc2, 0xd2, 0xa1, 0xdb, 0x87, 0xdb,
-	0x6f, 0xa8, 0x90, 0x7a, 0x1c, 0x11, 0xe0, 0xe7, 0x14, 0x85, 0x74, 0x03, 0xe8, 0x6d, 0xe5, 0x05,
-	0x67, 0xb1, 0x40, 0xf2, 0x04, 0xda, 0x7a, 0x38, 0x61, 0x5b, 0xc3, 0xe6, 0xa8, 0x33, 0x3e, 0xf5,
-	0x76, 0xe4, 0xf5, 0x74, 0x63, 0x50, 0xfd, 0xed, 0x2e, 0x80, 0xbc, 0xc2, 0x12, 0xb2, 0x60, 0x3a,
-	0x2c, 0x60, 0x25, 0x51, 0x63, 0x5b, 0xa2, 0x4a, 0xd8, 0xe6, 0x96, 0xb0, 0xee, 0x5b, 0xe8, 0xbd,
-	0x48, 0x30, 0x94, 0xb8, 0xcd, 0xf7, 0x08, 0x4e, 0x34, 0xb8, 0x22, 0x3b, 0xf0, 0xfe, 0xf2, 0xe7,
-	0x0c, 0xf1, 0x3d, 0x9f, 0x5d, 0x25, 0xe2, 0x63, 0xe8, 0xbd, 0xc4, 0x25, 0xee, 0x22, 0x1e, 0xd2,
-	0x64, 0xfc, 0xf7, 0x08, 0x6e, 0xea, 0xa6, 0x77, 0x98, 0x5c, 0xd2, 0x08, 0xc9, 0x25, 0xdc, 0xd8,
-	0xb0, 0x8c, 0xdc, 0x37, 0xbc, 0xc2, 0x64, 0xb6, 0x33, 0x3a, 0xfc, 0x63, 0xee, 0xbe, 0x4b, 0xbe,
-	0xff, 0xfe, 0xf3, 0xb3, 0x71, 0x9d, 0x80, 0x5f, 0xda, 0x4a, 0x04, 0x74, 0x6a, 0xb6, 0x92, 0x7b,
-	0x06, 0xb0, 0x5d, 0xdb, 0x9d, 0x7d, 0x12, 0xb9, 0x43, 0x45, 0xe3, 0x10, 0xbb, 0xa2, 0xf1, 0xbf,
-	0xd6, 0x14, 0xf9, 0x46, 0x52, 0xe8, 0x6e, 0xda, 0x4b, 0x4c, 0x43, 0x18, 0x37, 0x60, 0x3f, 0xf5,
-	0x40, 0x51, 0xf7, 0xdd, 0xda, 0x84, 0x4f, 0x4b, 0xc7, 0xc8, 0x0f, 0x0b, 0xba, 0x9b, 0x4b, 0x60,
-	0xe4, 0x35, 0xee, 0xc9, 0x7e, 0xde, 0x89, 0xe2, 0x3d, 0x1b, 0xdf, 0x35, 0x8d, 0xec, 0xd5, 0x67,
-	0xaf, 0x3d, 0x47, 0x42, 0x77, 0x73, 0x81, 0x8c, 0xaf, 0x31, 0xee, 0x98, 0xd3, 0xf7, 0xf2, 0x1b,
-	0xe7, 0xe9, 0x1b, 0xe7, 0x9d, 0x67, 0x37, 0x4e, 0x6b, 0xff, 0xe0, 0xbf, 0xda, 0x3f, 0x7f, 0xf8,
-	0x61, 0x32, 0xa7, 0xf2, 0x53, 0x3a, 0xf5, 0x22, 0xb6, 0xf2, 0x35, 0xdf, 0x19, 0x65, 0xe5, 0xb7,
-	0xaf, 0xb9, 0xb3, 0xf3, 0xfa, 0x2c, 0xe4, 0xf4, 0x82, 0x4f, 0xa7, 0x2d, 0x45, 0x34, 0xf9, 0x17,
-	0x00, 0x00, 0xff, 0xff, 0xb1, 0x98, 0x72, 0x60, 0x9d, 0x05, 0x00, 0x00,
+	// 521 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xac, 0x54, 0xc1, 0x6e, 0xd3, 0x40,
+	0x10, 0x95, 0x93, 0x92, 0x36, 0x53, 0x08, 0x65, 0x44, 0x22, 0x93, 0xe6, 0x10, 0x59, 0xaa, 0x08,
+	0x20, 0x6c, 0x29, 0x15, 0x42, 0xc0, 0x0d, 0xa8, 0xb8, 0x70, 0x40, 0x46, 0x5c, 0x10, 0x12, 0x72,
+	0x9c, 0x21, 0xac, 0xe2, 0x78, 0x17, 0x7b, 0x5d, 0x51, 0x21, 0x2e, 0x88, 0x3f, 0xe0, 0x6f, 0xf8,
+	0x0d, 0xfe, 0x00, 0xf1, 0x21, 0xc8, 0x6b, 0xaf, 0x9d, 0xc4, 0xab, 0xf4, 0xd2, 0xdb, 0xce, 0xcc,
+	0xce, 0x7b, 0xb3, 0xef, 0xad, 0x06, 0x7a, 0x94, 0x25, 0x5c, 0x50, 0x10, 0xbb, 0x22, 0xe1, 0x92,
+	0xe3, 0xad, 0x05, 0xe7, 0x42, 0x32, 0x1e, 0xbb, 0x21, 0x8f, 0x65, 0x12, 0x84, 0x72, 0x38, 0x5a,
+	0x70, 0xbe, 0x88, 0xc8, 0x0b, 0x04, 0xf3, 0x82, 0x38, 0xe6, 0x32, 0xc8, 0xeb, 0x69, 0xd1, 0x30,
+	0x3c, 0x2e, 0xab, 0x2a, 0x9a, 0x65, 0x9f, 0x3c, 0x5a, 0x09, 0x79, 0x51, 0x14, 0x9d, 0xdf, 0x16,
+	0x1c, 0x9c, 0x95, 0x04, 0x78, 0x04, 0xed, 0x8c, 0xcd, 0x6d, 0x6b, 0x6c, 0x4d, 0xba, 0x7e, 0x7e,
+	0xc4, 0x11, 0x74, 0x25, 0x5b, 0x51, 0x2a, 0x83, 0x95, 0xb0, 0x5b, 0x63, 0x6b, 0x62, 0xf9, 0x75,
+	0x02, 0x07, 0xd0, 0x91, 0x2c, 0x5c, 0x52, 0x62, 0xb7, 0x55, 0x4b, 0x19, 0xe5, 0x5d, 0x59, 0x3c,
+	0x2f, 0x4b, 0x7b, 0xaa, 0x54, 0x27, 0xf2, 0xae, 0x54, 0x26, 0x6c, 0x49, 0xf6, 0x35, 0x05, 0x58,
+	0x46, 0x79, 0x9e, 0xbe, 0x0a, 0x96, 0x5c, 0xd8, 0x9d, 0x22, 0x5f, 0x44, 0x68, 0xc3, 0xbe, 0xc8,
+	0x64, 0x18, 0x44, 0x91, 0xbd, 0xaf, 0xb0, 0x74, 0xe8, 0x0c, 0xe0, 0xf6, 0x6b, 0x96, 0x4a, 0x3d,
+	0x7f, 0xea, 0xd3, 0x97, 0x8c, 0x52, 0xe9, 0xf8, 0xd0, 0xdf, 0xca, 0xa7, 0x82, 0xc7, 0x29, 0xe1,
+	0x13, 0xe8, 0x6a, 0x35, 0x53, 0xdb, 0x1a, 0xb7, 0x27, 0x87, 0xd3, 0x63, 0xb7, 0xa1, 0xa7, 0xab,
+	0x1b, 0xfd, 0xfa, 0xb6, 0xf3, 0x01, 0xf0, 0x15, 0x55, 0x90, 0x25, 0x93, 0x41, 0xb1, 0x5a, 0x93,
+	0xd6, 0xb6, 0x26, 0xb5, 0x92, 0xed, 0x2d, 0x25, 0x9d, 0x37, 0xd0, 0x7f, 0x91, 0x50, 0x20, 0x69,
+	0x9b, 0xe0, 0x31, 0x1c, 0xe8, 0x19, 0x14, 0xcb, 0x25, 0x03, 0x57, 0x97, 0x73, 0xc4, 0x77, 0x62,
+	0x7e, 0x95, 0x88, 0xf7, 0xa0, 0xff, 0x92, 0x22, 0x6a, 0x22, 0x36, 0x44, 0x98, 0xfe, 0xdd, 0x83,
+	0x9b, 0xfa, 0xd6, 0x5b, 0x4a, 0xce, 0x59, 0x48, 0x78, 0x0e, 0x37, 0x36, 0x4c, 0xc1, 0xbb, 0x06,
+	0x5a, 0x93, 0x9d, 0xc3, 0xc9, 0xe5, 0x17, 0x0b, 0x7f, 0x1d, 0xfc, 0xf1, 0xe7, 0xdf, 0xaf, 0xd6,
+	0x75, 0x04, 0xaf, 0x32, 0x0e, 0x97, 0x70, 0xb8, 0x66, 0x1c, 0x9e, 0x18, 0xc0, 0x9a, 0xc6, 0x0e,
+	0x77, 0x69, 0xe2, 0xd8, 0x8a, 0x06, 0xf1, 0xa8, 0xa6, 0xf1, 0xbe, 0x65, 0x6c, 0xfe, 0x1d, 0x33,
+	0xe8, 0x6d, 0xfa, 0x88, 0xa6, 0xe1, 0x8d, 0x56, 0xef, 0xa6, 0x1c, 0x29, 0xca, 0x81, 0xb3, 0xf6,
+	0xb2, 0xa7, 0x95, 0x35, 0xf8, 0xd3, 0x82, 0xde, 0xa6, 0xdb, 0x46, 0x5e, 0xe3, 0x87, 0xd8, 0xcd,
+	0xfb, 0x40, 0xf1, 0x9e, 0x4c, 0xef, 0xac, 0x3f, 0xb5, 0xda, 0x48, 0xf9, 0x9b, 0xd7, 0xc6, 0x88,
+	0xa0, 0xb7, 0xf9, 0x43, 0x8c, 0x53, 0x18, 0x3f, 0xd1, 0x70, 0xe0, 0x16, 0x6b, 0xca, 0xd5, 0x6b,
+	0xca, 0x3d, 0xcb, 0xd7, 0x94, 0xd6, 0xfa, 0x7e, 0x43, 0xeb, 0xe7, 0x8f, 0xde, 0x9f, 0x2e, 0x98,
+	0xfc, 0x9c, 0xcd, 0xdc, 0x90, 0xaf, 0x3c, 0xcd, 0xf3, 0x90, 0xf1, 0xea, 0xec, 0x69, 0xce, 0x7c,
+	0x33, 0x3e, 0x0b, 0x04, 0xfb, 0x28, 0x66, 0xb3, 0x8e, 0x22, 0x38, 0xfd, 0x1f, 0x00, 0x00, 0xff,
+	0xff, 0x4a, 0xfd, 0x50, 0xda, 0x58, 0x05, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
